--- a/edu/my_wear_app/MyApp/wear/src/main/res/layout/rect_activity_home.xml
+++ b/edu/my_wear_app/MyApp/wear/src/main/res/layout/rect_activity_home.xml
@@ -8,6 +8,6 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageView"
+        android:id="@+id/iviLogo"
         android:src="@drawable/logo_gdglima"/>
 </LinearLayout>
